--- a/consumer/package.json
+++ b/consumer/package.json
@@ -3,26 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
+    "axios": "^0.27.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router": "6.16.0",
+    "react-router-dom": "6.16.0",
     "react-scripts": "5.0.1",
-    "spectre.css": "^0.5.8",
-    "web-vitals": "^2.1.4"
+    "spectre.css": "0.5.9",
+    "web-vitals": "3.4.0"
   },
   "devDependencies": {
-    "@pact-foundation/pact": "^10.0.0-beta.62",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "nock": "^11.7.2",
-    "rimraf": "^3.0.2"
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.5.1",
+    "rimraf": "5.0.4",
+    "cross-env": "7.0.3",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "CI=true react-scripts test",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
