--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "postinstall": "npm ci --prefix consumer",
-    "start": "npm start --prefix consumer"
+    "postinstall": "npm i --prefix consumer",
+    "start": "npm start --prefix consumer",
+    "lint": "cd consumer/ && npx eslint ."
   },
   "dependencies": {
-    "concurrently": "^5.0.2"
+    "concurrently": "8.2.1"
   }
 }
