--- a/provider/package.json
+++ b/provider/package.json
@@ -4,17 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "npx jest"
+    "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "cors": "2.8.5",
+    "express": "4.18.2"
   },
   "devDependencies": {
-    "@pact-foundation/pact": "^10.0.0-beta.62",
-    "eslint": "^6.8.0",
-    "jest": "^24.9.0"
+    "eslint": "8.50.0"
   },
   "license": "ISC"
 }
