--- a/provider/package.json
+++ b/provider/package.json
@@ -5,18 +5,17 @@
   "main": "app.js",
   "scripts": {
     "start": "node server.js",
-    "test": "npx jest",
-    "test:pact": "npx jest --testTimeout 30000 --testMatch \"**/*.pact.test.js\""
+    "test": "jest",
+    "test:pact": "jest --testTimeout 30000 --testMatch \"**/*.pact.test.js\""
   },
   "dependencies": {
-    "@pact-foundation/pact": "^9.11.1",
-    "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "cors": "2.8.5",
+    "express": "4.18.2"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "jest": "^24.9.0",
-    "@pact-foundation/pact": "^10.0.0"
+    "eslint": "8.50.0",
+    "jest": "29.7.0",
+    "@pact-foundation/pact": "12.1.0"
   },
   "license": "ISC"
 }
