--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,4 +27,4 @@ services:
       PACT_BROKER_DATABASE_HOST: postgres
       PACT_BROKER_DATABASE_NAME: postgres
       PACT_BROKER_DATABASE_CONNECT_MAX_RETRIES: "10"
-      PACT_BROKER_PUBLIC_HEARTBEAT: true
+      PACT_BROKER_PUBLIC_HEARTBEAT: "true"
