--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
   postgres:
     image: postgres
@@ -13,7 +11,7 @@ services:
       POSTGRES_DB: postgres
 
   pact-broker:
-    image: pactfoundation/pact-broker:latest-multi
+    image: pactfoundation/pact-broker:latest
     links:
       - postgres
     ports:
