chore(ci): publish pacts

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,5 @@ jobs:
       - run: docker compose up -d
       - run: npm i
       - run: npm test --prefix consumer
+      - run: npm run pact:publish --prefix consumer
       - run: npm test --prefix provider
