--- a/consumer/package.json
+++ b/consumer/package.json
@@ -3,33 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.27.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router": "6.16.0",
-    "react-router-dom": "6.16.0",
+    "axios": "^1.7.7",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-router": "6.27.0",
+    "react-router-dom": "6.27.0",
     "react-scripts": "5.0.1",
     "spectre.css": "0.5.9",
-    "web-vitals": "3.4.0"
+    "web-vitals": "4.2.3"
   },
   "devDependencies": {
-    "@pact-foundation/pact": "12.1.0",
-    
-    "@testing-library/react": "14.0.0",
-    "@testing-library/user-event": "14.5.1",
-    "nock": "13.3.3",
-    "rimraf": "5.0.4",
+    "@pact-foundation/pact": "13.1.4", 
+    "@testing-library/react": "16.0.1",
+    "@testing-library/user-event": "14.5.2",
+    "nock": "13.5.5",
+    "rimraf": "6.0.1",
     "cross-env": "7.0.3",
     "@babel/plugin-proposal-private-property-in-object": "7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "cross-env CI=true react-scripts test",
+    "test": "cross-env CI=true react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "eject": "react-scripts eject",
     "pretest:pact": "rimraf pacts/*.json",
-    "test:pact": "cross-env CI=true react-scripts test --testTimeout=30000 pact.spec.js",
-    "test:unit": "cross-env CI=true react-scripts test api.spec.js"
+    "test:pact": "cross-env CI=true react-scripts test --testTimeout=30000 pact.spec.js --transformIgnorePatterns \"node_modules/(?!axios)/\"",
+    "test:unit": "cross-env CI=true react-scripts test api.spec.js --transformIgnorePatterns \"node_modules/(?!axios)/\""
   },
   "eslintConfig": {
     "extends": "react-app"
