--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,4 @@ jobs:
       - run: npm run create-webhook --prefix broker-webhook
       - run: npm test --prefix consumer
       - run: npm run pact:publish --prefix consumer
-      - run: wait 30
+      - run: sleep 30
